# Random-Code

./: .gitignore  .replit  README.md  anagram2.py  armstrong.py  average.py  bubblesort.py  cipher.py  countrange.py  ctf.py  db.json  deal.py  deck.py  durian.py  exesetup.py  factorial.py  fib.py  functions.py  gpa.py  guess.py  hangman.py  help.db  infinite.py  ing.py  input_q.py  loop.py  luhn.py  luhn_lambda.py  luhn_loop.py  main.py  manual_decbin.py  markdown.md  maze.py  minesweeper.py  notpoor.py  numsys.py  password.py  piglatin.py  productcode.py  puzzle.py  (+16 more)
Anagram Checker/: anagram.py  tests.py
Binomial Expansion/: binomial.py  shortened.py  tests.py
Bubblesort Algorithm/: bubblesort.py  tests.py
Caesar Cipher/: caesar.py  tests.py
Chess/: chess.py
Hangman/: hangman.py
Other Code/: ISBN.py  README.md  anagram1.py  anagrams.py  awards.py  bmi.py  checkdigit.py  countletters.py  countlines.py  ctf.py  digits_sum.py  factorial.py  hcf.py  ing.py  joinwords.py  palindrome.py  pattern1.py  piglatin.py  prime.py  sort.py  temperature.py  time.py  upc.py  varwords.py  vowel.py  whoareyou.py
Sliding Puzzle/: sliding.py
Tic Tac Toe/: tictactoe.py
dump/: test.py  wordlist5.py  wordtxt.py
