[tool.poetry]
name = "repl_nix_Hello-World"
version = "0.1.0"
description = ""
authors = ["kitkat3141 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
googletrans = "^3.0.0"
cryptography = "^37.0.4"
Kivy = "^2.1.0"
cx-Freeze = "^6.11.1"
colorama = "^0.4.5"
discord = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
